--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,9 +9,13 @@
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
 	<link rel="stylesheet" href="./assets/style.css">
+	<script src="https://kit.fontawesome.com/ef746cba05.js" crossorigin="anonymous"></script>
 	<script src="app.js" defer></script>
 </head>
 <body>
+	<div class="edit">
+		<p><i class="fa-regular fa-pen-to-square"></i>Mode édition</p>
+	</div>
 <header>
 	<h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
 	<nav>
